URL->URI test fix